# cubos

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTE.md  LICENSE  README.md  aabb_8hpp.html  aabb_8hpp.js  aabb_8hpp__incl.map  aabb_8hpp__incl.md5  aabb_8hpp_source.html  access_8hpp.html  accessors_8hpp.html  accessors_8hpp_source.html  accumulated__correction_8hpp.html  action_8hpp.html  action_8hpp__dep__incl.map  action_8hpp__dep__incl.md5  action_8hpp__incl.map  action_8hpp__incl.md5  action_8hpp_source.html  address_8hpp.html  angular__impulse_8hpp.html  annotated.html  annotated_dup.js  any__value_8hpp.html  any__vector_8hpp.html  archetype_8hpp.html  archetype__graph_8hpp.html  archetype__id_8hpp.html  archive_8hpp.html  archive_8hpp__dep__incl.map  archive_8hpp__dep__incl.md5  archive_8hpp__incl.map  archive_8hpp__incl.md5  (+2958 more)
api/core/: CMakeLists.txt
api/core/samples/: CMakeLists.txt
api/core/src/: api.cpp
api/engine/: CMakeLists.txt
api/engine/samples/: CMakeLists.txt
api/engine/src/: api.cpp
bindings/lua/: CMakeLists.txt
bindings/lua/samples/: CMakeLists.txt
bindings/lua/src/: cubos.cpp  cubos.hpp  depends.cpp  depends.hpp  logging.cpp  logging.hpp  plugin.cpp  systems.cpp  systems.hpp  utils.cpp
core/: CMakeLists.txt
core/include/components/: base.hpp
core/include/cubos/: debug_render.hpp  event.hpp  settings.hpp
core/lib/glad/: CMakeLists.txt
core/lib/json/: CMakeLists.txt
core/samples/: CMakeLists.txt  debug_renderer.cpp  ecs.cpp  embedded_archive.cpp  event_system.cpp  input_manager.cpp  logging.cpp  render_device.cpp  render_device_compute.cpp  serialization.cpp  ui.cpp
core/samples/al/: main.cpp
core/samples/data/: page.md
core/samples/logging/: main.cpp  page.md
core/samples/metrics/: main.cpp  page.md
core/samples/net/: page.md
core/samples/reflection/: fruit.cpp  fruit.hpp  main.cpp  page.md  printer.cpp  printer.hpp
core/samples/tel/: page.md
core/src/: api.cpp  log.cpp  metrics.cpp  thread_pool.cpp
core/src/al/: audio_context.cpp  audio_device.cpp  miniaudio_context.cpp  miniaudio_device.cpp  oal_audio_device.cpp  port_audio_device.cpp  port_audio_device.hpp
core/src/cubos/: debug_render.cpp  log.cpp  settings.cpp
core/src/ecs/: blueprint.cpp  command_buffer.cpp  cubos.cpp  debugger.cpp  debugger.hpp  dynamic.cpp  name.cpp  plugin_queue.cpp  reflection.cpp  tag.cpp  types.cpp  world.cpp
core/src/geom/: box.cpp  capsule.cpp  frustum.cpp  intersections.cpp  plane.cpp  utils.cpp
core/src/gl/: ogl_render_device.cpp  ogl_render_device.hpp  render_device.cpp  util.cpp
core/src/io/: cursor.cpp  gamepad.cpp  glfw_window.cpp  glfw_window.hpp  keyboard.cpp  window.cpp
core/src/memory/: any_value.cpp  any_vector.cpp  buffer_stream.cpp  opt.cpp  standard_stream.cpp  stream.cpp
core/src/net/: address.cpp  tcp_listener.cpp  tcp_socket.cpp  tcp_stream.cpp  udp_socket.cpp  utils.cpp
core/src/reflection/: comparison.cpp  reflect.cpp  type.cpp  type_client.cpp  type_client_server_defaults.cpp  type_client_server_defaults.hpp  type_registry.cpp  type_server.cpp
core/src/tel/: level.cpp  logging.cpp  metrics.cpp  tracing.cpp
core/src/thread/: pool.cpp  process.cpp  task.cpp
core/tests/: CMakeLists.txt  test_buffer_stream.cpp  test_event_system.cpp  test_json_deserialization.cpp  test_json_serialization.cpp  test_package.cpp  test_settings.cpp  test_std_archive.cpp  test_thread_pool.cpp  test_yaml_deserialization.cpp  test_yaml_serialization.cpp  test_yaml_serialization_and_deserialization.cpp  utils.cpp  utils.hpp
core/tests/data/: context.cpp  embedded_archive.cpp  file_system.cpp  standard_archive.cpp  std_archive.cpp  utils.hpp
docs/: 1_core.md  2_engine.md  3_cubinhos.md  CMakeLists.txt  CNAME  Doxyfile  accumulated__correction_8hpp.html  action_8hpp.html  annotated.html  archetype_8hpp.html  archetype__graph_8hpp.html  archetype__id_8hpp.html  archive_8hpp.html  assets_8hpp.html  audio__device_8hpp.html  bloom_8hpp.html  blueprint_8hpp.html  child__of_8hpp.html  classcubos_1_1core_1_1Logger.html  classcubos_1_1core_1_1Metrics.html  classcubos_1_1core_1_1al_1_1impl_1_1Source.html  classcubos_1_1core_1_1data_1_1DebugSerializer.html  classcubos_1_1core_1_1data_1_1Deserializer.html  classcubos_1_1core_1_1data_1_1EmbeddedArchive.html  classcubos_1_1core_1_1data_1_1FileStream.html  classcubos_1_1core_1_1data_1_1FileSystem.html  classcubos_1_1core_1_1data_1_1JSONDeserializer.html  classcubos_1_1core_1_1data_1_1JSONSerializer.html  classcubos_1_1core_1_1data_1_1StandardArchive.html  classcubos_1_1core_1_1ecs_1_1Blueprint.html  classcubos_1_1core_1_1ecs_1_1Commands.html  classcubos_1_1core_1_1ecs_1_1Cubos.html  classcubos_1_1core_1_1ecs_1_1DenseTable.html  classcubos_1_1core_1_1ecs_1_1DenseTableRegistry.html  classcubos_1_1core_1_1ecs_1_1Dispatcher.html  classcubos_1_1core_1_1ecs_1_1EntityPool.html  classcubos_1_1core_1_1ecs_1_1EventPipe.html  classcubos_1_1core_1_1ecs_1_1EventReader.html  classcubos_1_1core_1_1ecs_1_1EventReader_1_1Iterator.html  classcubos_1_1core_1_1ecs_1_1EventWriter.html  (+455 more)
docs/1_core/: 2_data.md  3_gl.md  4_io.md  5_ui.md  6_ecs.md  namespaces.dox
docs/1_structure/: 3_cubinhos.md
docs/2_guides/: 1_hello_world.md  2_first_voxels.md  3_camera_controller.md
docs/core/: 1_memory.md  2_data.md
docs/html/: footer.html  header.html
docs/pages/: main.md  module.dox
engine/: CMakeLists.txt
engine/samples/: CMakeLists.txt  asset.cpp  asset_renderer.cpp  bloom.cpp  car.cpp  car_ecs.cpp  cars.cpp  empty.cpp  emscripten.html  race.cpp  renderer.cpp  scene.cpp  ssao.cpp  triangulation.cpp
engine/src/: api.cpp  prelude.cpp
engine/tests/: CMakeLists.txt  raycast.cpp  settings.cpp  transform.cpp  utils.hpp
tools/: CMakeLists.txt
tools/cubinhos/: CMakeLists.txt
tools/embed/: CMakeLists.txt
tools/quadrados/: CMakeLists.txt
tools/quadrados-gen/: CMakeLists.txt
tools/src/: convert.cpp  embed.cpp  entry.cpp  generate.cpp  tools.hpp
tools/tesserato/: CMakeLists.txt
tools/tesseratos/: CMakeLists.txt
(+11231 files in other folders)
